--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=20.17",
+    "yarn": ">=1.19.1"
+  },
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
