--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "yarn": ">=1.19.1"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
