--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,7 @@ extends:
   - standard
   - eslint:recommended
   - plugin:react/recommended
+  - plugin:react/jsx-runtime
   - plugin:@typescript-eslint/eslint-recommended
   - plugin:prettier/recommended
 
