--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ PORT=3000
 NODE_ENV=production
 APP_ENV=development
 BASE_URL=
-API_BASE_URL=
+API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com/
