--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=production
 APP_ENV=development
-BASE_URL=
+NEXT_PUBLIC_BASE_URL=
 API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com/
+NEXT_PUBLIC_API_KEY=
