--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=production
 APP_ENV=development
-BASE_URL=http://localhost:3000
-API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_KEY=
