--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "@common/*": ["src/common/*"],
       "@modules/*": ["src/modules/*"],
+      "@services/*": ["src/services/*"],
       "@styles/*": ["src/styles/*"]
     }
   },
