feat: add doctor list page (#2)
* feat: add hero banner

* feat: add doctor card

* feat: add doctor list

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=production
 APP_ENV=production
-BASE_URL=
-API_BASE_URL=
+NEXT_PUBLIC_BASE_URL=
+NEXT_PUBLIC_API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com/
+NEXT_PUBLIC_API_KEY=
