--- a/.env.uat
+++ b/.env.uat
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=production
 APP_ENV=uat
-BASE_URL=
-API_BASE_URL=
+NEXT_PUBLIC_BASE_URL=
+NEXT_PUBLIC_API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com/
+NEXT_PUBLIC_API_KEY=
