--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "yarn": ">=1.22.22"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.56.2",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
