--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,5 @@ PORT=3000
 NODE_ENV=production
 APP_ENV=development
 NEXT_PUBLIC_BASE_URL=
-API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com/
+API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com
 NEXT_PUBLIC_API_KEY=
