--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@ PORT=3000
 NODE_ENV=production
 APP_ENV=production
 NEXT_PUBLIC_BASE_URL=
-NEXT_PUBLIC_API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com/
+NEXT_PUBLIC_API_BASE_URL=https://bowtie-fe-assignment-api.onrender.com
 NEXT_PUBLIC_API_KEY=
