--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=20.17",
     "yarn": ">=1.22.22"
   },
+  "packageManager": "yarn@1.22.22",
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
     "autoprefixer": "^10.4.20",
