--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,7 @@ parserOptions:
     jsx: true
 
 plugins:
+  - ramda
   - react-hooks
   - '@typescript-eslint'
   - simple-import-sort
@@ -22,6 +23,7 @@ extends:
   - standard
   - eslint:recommended
   - plugin:react/recommended
+  - plugin:ramda/recommended
   - plugin:react/jsx-runtime
   - plugin:@typescript-eslint/eslint-recommended
   - plugin:prettier/recommended
@@ -102,6 +104,17 @@ rules:
   react/jsx-handler-names: error
   # react component must be in PascalCase
   react/jsx-pascal-case: error
+
+  # use `R.T()` instead of `R.always(true)`
+  ramda/always-simplification: error
+  # use `R.chain` instead of `R.compose(R.flatten, R.map)`
+  ramda/compose-simplification: error
+  # use `R.eqProps` instead of `R.eqBy(R.prop(_))`
+  ramda/eq-by-simplification: error
+  # use `R.both`/`R.either` instead of `R.allPass`/`R.anyPass` when there is only two predicates
+  ramda/prefer-both-either: error
+  # use `R.complement` instead of `R.compose(R.not, ...)`
+  ramda/prefer-complement: error
 
   # rules of hooks
   react-hooks/rules-of-hooks: error
