--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@common/*": ["src/common/*"],
       "@modules/*": ["src/modules/*"],
       "@services/*": ["src/services/*"],
+      "@store/*": ["src/store/*"],
       "@styles/*": ["src/styles/*"]
     }
   },
